          multi-page projects. Known issue: The button requires multiple clicks, which appears to be related to #169.
        - Add a right-click context menu to the tab header.
        - Allow fixed amounts on fuel, ingredients, and products, in addition to buildings.
        - Add a setting to force software rendering if hardware rendering does not work on your system.
    Bugfixes:
        - Several fixes to the legacy summary page, including a regression in 0.8.1.
    Internal changes:
        - Add .git-blame-ignore revs. It doesn't work with Visual Studio, but it might be useful in CLI or other IDEs.
----------------------------------------------------------------------------------------------------------------------
Version 0.8.1
Date: August 8th 2024
    Bugfixes:
        - Handle electric energy interfaces better (e.g. pY's fish turbines, Nullius's wind turbines) when used to
          generate power.
        - Refuse to accept negative numbers in several places where they don't make sense.
    Internal changes:
        - Refactor a lot of the drawing code to increase both UI consistency and consistency in being able to pass
          options to methods that should accept them.
----------------------------------------------------------------------------------------------------------------------
Version 0.8.0
Date: August 3rd 2024
    Features:
        - Autofocus some search fields: when you open the pane to add a new recipe and when you view module templates
        - Provide hints that control+clicking can add recipes, or to explain how to change things so it can.
        - Add "Copy to Clipboard" button for data loading errors
    Bugfixes:
        - Fix regression in fluid variant selection when adding recipes.
        - "Extra products" will now show only the extra production of a requested product.
----------------------------------------------------------------------------------------------------------------------
Version 0.7.5
Date: July 27th 2024