@@ -23,6 +23,8 @@ Date:
         - Add a right-click context menu to the tab header.
         - Allow fixed amounts on fuel, ingredients, and products, in addition to buildings.
         - Add a setting to force software rendering if hardware rendering does not work on your system.
+        - Switch tabs using Ctrl+PgUp / Ctrl+PgDown
+        - Reorder tabs using Ctrl+Shift+PgUp / Ctrl+Shift+PgDown
     Bugfixes:
         - Several fixes to the legacy summary page, including a regression in 0.8.1.
     Internal changes:
